6th level completed

--- a/iplclone/iplapp/templates/iplapp/login.html
+++ b/iplclone/iplapp/templates/iplapp/login.html
@@ -41,10 +41,10 @@
             <span><input type="password" name="password" class="input"></span>
 
             <br><br>
-            <span><input type="submit" value="Login" class="button"> </span>
+            <span><input type="submit" value="Login" class="button is-primary is-medium is-outlined"> </span>
 
             <br><br>
-            <h1>Dont have an Account Click <a href="{% url 'register' %}">here to Register</a></h1>
+            <h1 class="title is-6">Dont have an Account Click <a href="{% url 'register' %}">here to Register</a></h1>
         </form>
     </div>
 </div>
