--- a/iplclone/iplapp/templates/iplapp/register.html
+++ b/iplclone/iplapp/templates/iplapp/register.html
@@ -48,9 +48,9 @@
             <span><input type="password" name="password" class="input"></span>
 
             <br><br>
-            <span><input type="submit" value="Create" class="button"> </span>
+            <span><input type="submit" value="Create" class="button is-primary is-medium is-outlined"> </span>
             <br><br>
-        <h1 class="title is-5">Already have an account click <a href="{% url 'login' %}">here to Login</a></h1>
+        <h1 class="title is-6">Already have an account click <a href="{% url 'login' %}">here to Login</a></h1>
         </form>
     </div>
 </div>
