--- a/iplclone/iplapp/templates/iplapp/userheader.html
+++ b/iplclone/iplapp/templates/iplapp/userheader.html
@@ -6,7 +6,8 @@
     }
     .navbar-start>.navbar-item:hover
     {
-        border:1px solid #0f81cc;
+	border-top:1px solid #0f81cc;
+	border-bottom:1px solid #0f81cc;
     }
 
 </style>
