--- a/iplclone/iplapp/templates/iplapp/userheader.html
+++ b/iplclone/iplapp/templates/iplapp/userheader.html
@@ -6,17 +6,24 @@
     }
     .navbar-start>.navbar-item:hover
     {
-	border-top:1px solid #0f81cc;
-	border-bottom:1px solid #0f81cc;
+	    border-top:1px dashed #0f81cc;
+        border-bottom:1px dashed #0f81cc;
     }
 
 </style>
 <div class="box top-box">
-    <div class="navbar">
+    <div class="navbar" >
     {% load static %}
-        <div class="navbar-brand"><img class="image is-64x64" src="{% static 'iplapp/ipl.png'%}"></div>
+        <div class="navbar-brand">
+            <img class="image is-64x64 navbar-item" src="{% static 'iplapp/ipl.png'%}">
+            <div class="navbar-burger burger" data-target="our-navbar">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
 
-        <div class="navbar-menu">
+        <div id="our-navbar" class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item" href="{% url 'home' %}">Home</a>
             <a class="navbar-item" href="{% url 'season_details' 2019 %}">Seasons</a>
@@ -41,3 +48,30 @@
         </div>
     </div>
 </div>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+
+  // Get all "navbar-burger" elements
+  const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+  // Check if there are any navbar burgers
+  if ($navbarBurgers.length > 0) {
+
+    // Add a click event on each of them
+    $navbarBurgers.forEach( el => {
+      el.addEventListener('click', () => {
+
+        // Get the target from the "data-target" attribute
+        const target = el.dataset.target;
+        const $target = document.getElementById(target);
+
+        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+        el.classList.toggle('is-active');
+        $target.classList.toggle('is-active');
+
+      });
+    });
+  }
+
+});
+</script>
